# distBVH

./: .clang-format  .env  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  INSTALL  LICENSE  README.md  cuda11.4.3-gcc9.4-x64.dockerfile  requirements.txt  spack-cuda.yaml  spack.yaml  ubuntu20.04-gcc11-x64.dockerfile
.github/: dependabot.yml
.github/workflows/: ci-baseline-cuda.yml  ci-baseline.yml  docker-images.yml  ubuntu20.04-gcc11-x64.yml
ci/: nimble_build_integration.sh  nimble_test_integration.sh
cmake/: bvhConfig.cmake.in
cmake/Modules/: FindSphinx.cmake  run_sphinx.cmake
docs/: CMakeLists.txt  building.rst  conf.py.in  index.rst
docs/api/: kdop.rst  snapshot.rst  tree.rst  tree_build.rst  vec.rst
examples/: CMakeLists.txt  vis_bvh.cpp  vis_kdop.cpp
examples/spheres/: CMakeLists.txt  collide_two_blocks.cpp  collision_sphere.hpp  granular_object.cpp  granular_object.hpp  granular_object_test.cpp  sphere.hpp
scripts/: license_template  update_license.sh
spack-repos/p3a/: repo.yaml
src/: CMakeLists.txt
src/bvh/: CMakeLists.txt  bvh_build.hpp  collision_object.cpp  collision_object.hpp  collision_query.hpp  collision_world.cpp  collision_world.hpp  common.hpp  contact_entity.hpp  hash.hpp  kdop.hpp  logging.hpp  memory.hpp  node.hpp  patch.hpp  range.hpp  registry.hpp  snapshot.cpp  snapshot.hpp  splitting.hpp  traits.hpp  tree.hpp  tree_build.hpp  tree_iterator.hpp  treelet.hpp  type_traits.hpp  types.hpp
src/bvh/collision_object/: CMakeLists.txt  broadphase.cpp  broadphase.hpp  impl.cpp  impl.hpp  narrowphase.cpp  narrowphase.hpp  top_down.cpp  top_down.hpp  types.hpp
src/bvh/collision_world/: CMakeLists.txt  impl.cpp  impl.hpp
src/bvh/debug/: assert.hpp  trace.hpp
src/bvh/exceptions/: exception.hpp  invalid_tree_exception.hpp
src/bvh/iterators/: level_iterator.hpp  offset_iterator.hpp  transform_iterator.hpp  zip_iterator.hpp
src/bvh/math/: common.hpp  compiler.hpp  constant_vec.hpp  named_access.hpp  promotion.hpp  vec.hpp  vector_traits.hpp
src/bvh/math/ops/: avx2_vec_ops.hpp  constexpr_arithmetic.hpp  mem.hpp  vec_arithmetic_ops.hpp  vec_base_ops.hpp  vec_bool_ops.hpp  vec_generic_ops.hpp  vec_ops.hpp
src/bvh/math/storage/: constexpr_vec_storage.hpp  vec_storage.hpp
src/bvh/narrowphase/: kokkos.hpp
src/bvh/perf/: instrument.hpp
src/bvh/primitive/: kokkos_closest_point.hpp  triangle.hpp
src/bvh/serialization/: bvh_serialize.hpp
src/bvh/split/: CMakeLists.txt  axis.hpp  cluster.cpp  cluster.hpp  element_permutations.hpp  mean.hpp  split.hpp
src/bvh/util/: array.hpp  assert.hpp  attributes.hpp  bits.hpp  container.hpp  epoch.hpp  functional.hpp  kokkos.hpp  prefix_sum.hpp  sort.hpp  span.hpp
src/bvh/vis/: vis_bvh.hpp  vis_kdop.hpp  vtk_helpers.hpp
src/bvh/vt/: helpers.hpp  print.hpp
src/bvh/vt/dist_tree/: build.hpp
tests/: BroadphaseTest.cpp  CMakeLists.txt  CollisionTest.cpp  IteratorTest.cpp  KDopTest.cpp  KokkosTest.cpp  NarrowphaseTest.cpp  PatchTest.cpp  PrimitiveTest.cpp  SerializerTest.cpp  SplitTest.cpp  TestCommon.hpp  TestMain.cpp  TreeTest.cpp  UtilTest.cpp  bits_test.cpp  cluster_test.cpp  collision_object_test.cpp  hash_test.cpp  math_vec_tests.cpp  snapshot_test.cpp  sort_test.cpp
tests/catch2/: catch.hpp
tpl/spdlog/: CMakeLists.txt
tpl/spdlog/include/spdlog/: common.h  logger.h
tpl/spdlog/include/spdlog/fmt/: fmt.h
